@@ -30,33 +30,28 @@ import java.util.HashMap;
 import java.util.stream.Collectors;
 
 public final class GivePet extends JavaPlugin {
-
-    private static GivePet instance;
-    private static SQLTable requestsTable;
-    private static SQLTable logsTable;
-    public static HashMap<Player, Request> requests = new HashMap<>();
+    private SQLTable requestsTable;
+    private SQLTable logsTable;
+    private final HashMap<Player, Request> requests = new HashMap<>();
+    private ConfigManager configManager;
 
     @Override
     public void onEnable() {
-        instance = this;
-
-        ConfigManager configManager = new ConfigManager();
-        configManager.reloadConfigs();
-
         SQLManager sqlManager = new SQLManager(this);
         requestsTable = sqlManager.createRequestsTable();
         logsTable = sqlManager.createLogsTable();
+
+        configManager = new ConfigManager(this);
+        configManager.reloadConfigs();
+
         sqlManager.clearTable(requestsTable);
 
         Bukkit.getPluginManager().registerEvents(new PlayerInteractListener(),this);
-        Bukkit.getPluginManager().registerEvents(new PetRequestListener(), this);
-        Bukkit.getPluginManager().registerEvents(new PetTransferListener(), this);
+        Bukkit.getPluginManager().registerEvents(new PetRequestListener(this, requestsTable, sqlManager, configManager), this);
+        Bukkit.getPluginManager().registerEvents(new PetTransferListener(this, configManager), this);
+
 
         setupCommands(BukkitCommandManager.create(this));
-    }
-
-    public static GivePet getInstance() {
-        return instance;
     }
 
     public SQLTable getSqlTable() {
@@ -67,13 +62,33 @@ public final class GivePet extends JavaPlugin {
         return logsTable;
     }
 
+    public HashMap<Player, Request> getRequests() {
+        return requests;
+    }
+
+    private static void sendHelp(@NotNull CommandSender sender, @NotNull DefaultMessageContext context) {
+        Command command = CommandManager.getCommands().getOrDefault(context.getSubCommand(), null);
+
+        if (command == null) {
+            Bukkit.dispatchCommand(sender, "givepet help");
+            return;
+        }
+
+        StringUtils.sendComponent(sender, StringUtils.getStringFromMessages(Messages.INVALID_ARGUMENT)
+                .replace("%command%", command.name())
+                .replace("%description%", command.description())
+                .replace("%usage%", command.usage()));
+    }
+
     private void setupCommands(BukkitCommandManager<CommandSender> bukkitCommandManager) {
-        bukkitCommandManager.registerRequirement(RequirementKey.of("has.request"), sender -> PetUtils.hasRequest((Player) sender));
+        bukkitCommandManager.registerRequirement(RequirementKey.of("has.request"), sender -> PetUtils.hasRequest((Player) sender, requests));
 
-        bukkitCommandManager.registerSuggestion(SuggestionKey.of("#players"), (sender, context) -> Bukkit.getOnlinePlayers().stream().map(Player::getName).toList());
-        bukkitCommandManager.registerSuggestion(SuggestionKey.of("#help"), (sender, context) -> CommandManager.getCommands().values().stream().filter((command -> CommandManager.hasPermission(sender, command))).map((Command::name)).collect(Collectors.toList()));
+        bukkitCommandManager.registerSuggestion(SuggestionKey.of("#help"), (sender, context) -> CommandManager.getCommands().values().stream()
+                .filter(command -> CommandManager.hasPermission(sender, command))
+                .map((Command::name))
+                .collect(Collectors.toList()));
 
-        bukkitCommandManager.registerMessage(MessageKey.of("no.pending.request", MessageContext.class), ((sender, context) -> StringUtils.sendComponent(sender, Messages.NO_PENDING_REQUEST)));
+        bukkitCommandManager.registerMessage(MessageKey.of("no.pending.request", MessageContext.class), (sender, context) -> StringUtils.sendComponent(sender, Messages.NO_PENDING_REQUEST));
         bukkitCommandManager.registerMessage(MessageKey.UNKNOWN_COMMAND, (sender, context) -> StringUtils.sendComponent(sender, Messages.UNKNOWN_COMMAND));
         bukkitCommandManager.registerMessage(BukkitMessageKey.NO_PERMISSION, (sender, context) -> StringUtils.sendComponent(sender, Messages.NO_PERMISSION));
         bukkitCommandManager.registerMessage(MessageKey.NOT_ENOUGH_ARGUMENTS, GivePet::sendHelp);
@@ -84,22 +99,7 @@ public final class GivePet extends JavaPlugin {
             }
         });
 
-        bukkitCommandManager.registerCommand(new GivePetCommand());
+        GivePetCommand givePetCommand = new GivePetCommand(requestsTable, requests, configManager);
+        bukkitCommandManager.registerCommand(givePetCommand);
     }
-
-    private static void sendHelp(@NotNull CommandSender sender, @NotNull DefaultMessageContext context) {
-        Command command = CommandManager.getCommands().getOrDefault(context.getSubCommand(), null);
-
-        if (command == null) {
-            new GivePetCommand().help(sender, null);
-            return;
-        }
-
-        StringUtils.sendComponent(sender, StringUtils.getStringFromMessages(Messages.INVALID_ARGUMENT)
-                .replace("%command%", command.name())
-                .replace("%description%", command.description())
-                .replace("%usage%", command.usage()));
-
-    }
-
 }
